[package]
name = "stepper_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.1.0"
gpio-cdev = "0.5.1"
#libudev = "0.3.0"

[dev-dependencies]
mockall = "0.11.0"
mockall_double = "0.2.1"
